# Auossie-OpenverifiableLLM-Prototype

./: .gitignore  README.md  pyproject.toml  test_manifest_demo.py
.github/workflows/: ci.yml
benchmarks/: pairwise_qa_mvp.jsonl
examples/: demo_util.py  sample_wiki.py
openverifiablellm/: environment.py  manifest_chain.py  utils.py  verify.py
openverifiablellm/eval/: __init__.py  calibrate.py  config.py  harness.py  policy.py  report.py  verifier.py
openverifiablellm/pipeline/: __init__.py  mvp_demo.py
openverifiablellm/tokenizer/: __init__.py  base.py  bpe_tokenizer.py  factory.py  sentencepiece_tokenizer.py  train.py  verify.py
openverifiablellm/training/: __init__.py  checkpoint.py  config.py  hooks.py  receipt.py  rng.py
scripts/: download_dump.py
tests/: test_environment.py  test_eval.py  test_falsifiability.py  test_fingerprint.py  test_integration.py  test_manifest_chain.py  test_pipeline_demo.py  test_tokenizer.py  test_training.py  test_util.py  test_verify.py
